Revision history for Cache

0.03 in progress
 - updated documentation and code style
 - completely rewrote and improved the limit_size method for a major
   performance gain
 - updated the syntax for expiration times to include the [number] [unit] 
   format, e.g. "10 seconds"
 - added the get_object method to the Cache interface, which allows
   access to the underlying cache object (without potentially expiring
   the object)
 - added the get_namespace and get_default_expires_in methods to the
   Cache interface definition
 - updated the MANIFEST
 - checked in preliminary cache benchmarking code
 - fixed bug fixed bug #406030 -- default_expires_in never invoked
 - refactored common code into BaseCache
 - use Static_Params method
 - fixed default_expires_in bug
 - added coding guidelines to STYLE
 - started version 0.03

0.02 2000-02-15-21-12
 - released version 0.02
 - added perldoc to SizeAwareFileCache
 - created SizeAwareFileCache
 - added the SizeAwareCacheTester module
 - refactored common test code into the AbstractCacheTester module
 - added the Recursively_List_Files_With_Paths routine to CacheUtils
 - marked the FileCache and MemoryCache as ISA Cache::Cache
 - updated the MANIFEST
 - started version 0.02

0.01 2001-02-13-16-16
 - released version 0.01
 - implemented Get_Temp_Dir to make the FileCache root more OS
   independent
 - started version 0.01

